# Observability_finder

./: .gitignore  .readthedocs.yaml  LICENSE  README  README.m  README.md  example_targets.txt  main.py  pyproject.toml  requirements.txt  testO.txt  test_file_for_git.txt
NEW/: main.py  note  obs_find.py  observability_finder.py  outfmt.py  output.csv  read_inputs.py
NEW/code/: obs_find.py  outfmt.py  read_inputs.py
OLD/: hello.txt  obs_summary.csv  observability_finder.py  temp_target_list.txt
OLD/archive/DK154-2025/: danish_broadband.txt  danish_narrowband.txt
OLD/archive/NTT_P115/: NTT_P115_backups.txt  NTT_P115_nice_backups.txt  NTT_P115_targets.txt
OLD/observability_funcs/: __init__.py  figures.py  outfmt.py  pdfs.py  twilight_times.py
code/: I_WANT_TO_WRITE_IN_PINK.txt  abby.txt  obs_find.py  read_inputs.py
docs/: conf.py  create_output.rst  ephemeris.rst  index.rst  latex.rst  plotting.rst  pyObsFind.rst  quick_start.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  ephemeris.doctree  index.doctree  pyObsFind.doctree  quick_start.doctree  read_inputs.doctree
docs/_build/html/: .buildinfo  ephemeris.html  genindex.html  index.html  objects.inv  py-modindex.html  pyObsFind.html  quick_start.html  read_inputs.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  pyObsFind.rst.txt  quick_start.rst.txt  (+1 more)
docs/_static/: example_targets.txt
example/: example_summary.csv
obsfind/: create_output.py  ephemeris.py  horizons_call.py  latex.py  make_pdfs.py  obs_find.py  outfmt.py  plotting.py  read_inputs.py  run.py
