[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
 
[project]
name = "pyObsFind"
version = "0.3.0"
description = "Package to find when solar system objects are observable"
readme = "README.md" 
license = {text="MIT"}
authors = [{name="Richard Cannon"},{name="Abigail Patrick"},{name="Ottavia Truttero"}]
keywords = ["astronomy","ephemeris","asteroids","comets"]

dependencies = [
 "matplotlib",
 "astropy",
 "pandas",
 "astroquery",
 "rich",
 "pylatex",
 "ephem",
]